--- a/src/Components/LibraryHeader/LibraryHeader.css
+++ b/src/Components/LibraryHeader/LibraryHeader.css
@@ -3,12 +3,14 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  color: #ffffff;
   width: 100%;
 }
 
 .library-header-button {
   color: #ffffff !important;
+  padding: 3px 4px !important;
+  max-width: 60px !important;
+  min-width: 40px !important;
   &:hover {
     background-color: transparent !important;
   }
@@ -19,7 +21,6 @@
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
-  color: #ffffff;
 }
 
 .library-search-bar {
@@ -28,10 +29,26 @@
   border: 1px solid #333333;
   padding: 5px;
   width: 80%;
-
   margin: 0px 20px 0px 10px;
+  @media screen and (max-width: 600px) {
+    margin: 0px 10px 0px 0px;
+  }
 }
 
 input[type="search"].library-search-bar:focus {
   border: 1px solid #ffffff;
+}
+
+.delete-library-entry-button {
+  color: #ffffff !important;
+  text-transform: none !important;
+  font-family: "Figtree" !important;
+  padding: 3px 4px !important;
+}
+
+.library-modification-buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
 }
