--- a/src/Pages/Account/Account.css
+++ b/src/Pages/Account/Account.css
@@ -18,7 +18,7 @@
   display: flex;
   flex-direction: row;
   align-items: flex-start;
-  justify-content: space-between;
+  justify-content: flex-start;
   padding-top: 50px;
   @media screen and (max-width: 600px) {
     height: 200px;
@@ -29,16 +29,17 @@
   display: flex;
   flex-direction: row;
   align-items: flex-start;
-  justify-content: space-between;
+  justify-content: flex-start;
   height: 100%;
-  width: 100%;
 }
 .user-details {
   padding-left: 10px;
   padding-right: 10px;
-  max-height: 250px;
-  height: 100%;
-  width: 100%;
+  overflow-y: scroll;
+  height: 250px;
+  @media screen and (max-width: 600px) {
+    height: 150px;
+  }
 }
 
 .centered-content {
@@ -104,7 +105,15 @@
   padding-bottom: 10px;
 }
 
+.info-button-container {
+  position: absolute;
+  right: 5px;
+  top: 75px;
+}
+
 .info-open-button {
+  width: 30px !important;
+  min-width: 30px !important;
   color: #ffffff !important;
   &.MuiButtonBase-root:hover {
     background-color: transparent;
